--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 <title>MARKDOWN TO HTML</title>
+	<meta charset="utf-8">
+
 </head>
 <body>
 <h4 id="1welkewebsiteheeftugevonden">1. Welke website heeft u gevonden?</h4>
