--- a/index.html
+++ b/index.html
@@ -3,45 +3,45 @@
 <head>
 <title>MARKDOWN TO HTML</title>
 	<meta charset="utf-8">
-
+<link href="style.css" rel="stylesheet">
 </head>
 <body>
 <h1>Markdown-warmup-html</h1>
 <h3>1. Welke website heeft u gevonden?</h3>
 
-	<ul>
-		<li>[www.yahoo.com] (https://web.archive.org/web/19961220154510/http://www.yahoo.com/)</li>
-	</ul>
+<ul>
+	<li>[www.yahoo.com] (https://web.archive.org/web/19961220154510/http://www.yahoo.com/)</li>
+</ul>
 
 <h3>2. Wordt de website nog regelmatig bijgewerkt?</h3>
 
-	<ul>
-		<li>ja, tot op de dag van vandaag wordt de huidige website nog bijgewerkt. Deze oude versie dateert van 1996</li>
-	</ul>
+<ul>
+	<li>ja, tot op de dag van vandaag wordt de huidige website nog bijgewerkt. Deze oude versie dateert van 1996</li>
+</ul>
 
 <h3>3. Hoe heb je deze website gevonden?</h3>
 
-	<ul>
-		<li>via webarchive</li>
-	</ul>
+<ul>
+	<li>via webarchive</li>
+</ul>
 
 <h3>4. Waarom heeft deze website updates of een remake nodig?</h3>
 
-	<ul>
-		<li>voornamelijk HTML based, geen interactie, the lack of CSS, veel white space,..</li>
-	</ul>
+<ul>
+	<li>voornamelijk HTML based, geen interactie, the lack of CSS, veel white space,..</li>
+</ul>
 
 <h3>5. Is deze website aanwezig op sociale media?</h3>
 
-	<ul>
-		<li>Nee</li>
-	</ul>
+<ul>
+	<li>Nee</li>
+</ul>
 
 <h3>6. Aanbevelingen?</h3>
 
-	<ul>
-		<li>Gebruik maken van de beschikbare white space door CSS te implementeren. </li>
-	</ul>
+<ul>
+	<li>Gebruik maken van de beschikbare white space door CSS te implementeren. </li>
+</ul>
 
 </body>
 </html>
