--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <h3>1. Welke website heeft u gevonden?</h3>
 
 <ul>
-	<li>[www.yahoo.com] (https://web.archive.org/web/19961220154510/http://www.yahoo.com/)</li>
+	<li>www.yahoo.com
+https://web.archive.org/web/19961220154510/http://www.yahoo.com/</li>
 </ul>
 
 <h3>2. Wordt de website nog regelmatig bijgewerkt?</h3>
