added index & css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h3>1. Welke website heeft u gevonden?</h3>
 
   <ul>
-   <li><a href="www.yahoo.com">Original Yahoo</a></li>
+   <li><a href="http://www.yahoo.com">Original Yahoo</a></li>
    <li><a href="https://web.archive.org/web/19961220154510/http://www.yahoo.com/">Old Yahoo</a></li>
   </ul>
 
